# livraria-django

./: .gitignore  ProcfIle  README.md  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_livro_isbn.py  0002_editora_alter_categoria_id.py  0002_livro_capa.py  0003_autor.py  0004_alter_autor_options_livro.py  0005_livro_autores.py
core/models/: categoria.py  livro.py
core/serializers/: livro.py
core/views/: autor.py  editora.py  livro.py
livraria/: settings.py  urls.py
